finish admin_info api
